# atlas-mind

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt  server.json
.github/: pull_request_template.md
.github/workflows/: tests.yml
deploy/: Caddyfile.example  Dockerfile  atlas.service  docker-compose.dev.yml  docker-compose.yml  fly.toml  fly.toml.example  update.sh
docs/: CNAME  README.md  index.html  llms.txt  robots.txt  sitemap.xml
docs/assets/: mind.webm
docs/demo/: index.html
examples/demo-mind/: README.md  atlas.toml  build-demo.py
examples/demo-mind/.notes/features/: own-your-data.md.json
examples/demo-mind/.notes/notes/: why-not-notion.md.json
examples/demo-mind/content/: welcome.md
examples/demo-mind/content/decks/: atlas-dashboard.html
examples/demo-mind/content/features/: activity-and-attribution.md  ai-native.md  collaboration.md  multi-formats.md  own-your-data.md  the-mind-graph.md
examples/demo-mind/content/guides/: getting-started-checklist.md  hive-mind.md  install-and-setup.md  markdown-showcase.md  whats-inside.md  wikilinks-and-backlinks.md
examples/demo-mind/content/notes/: atlas-by-the-numbers.md  why-not-notion.md
examples/extensions/custom-theme/: README.md  custom-theme.css
examples/extensions/pob/: README.md  pob.css  pob.js  pob.py
src/: __init__.py  build.py  cli.py  config.py  server.py  store.py
src/server/: __init__.py  __main__.py  constants.py  context.py  extensions.py  totp.py
src/server/app/: __init__.py  handler.py  router.py  routes_table.py
src/server/pure/: __init__.py  acl.py  auth.py  contradictions.py  contradictions_store.py  docs.py  git_history.py  hive.py  mcp_call.py  notes_md.py  params.py  queries.py  todos_md.py
src/server/render/: __init__.py  i18n.py  mcp_tools.py  pages.py  search_cache.py
src/server/routes/: __init__.py  account.py  acl.py  admin.py  apiv1.py  auth.py  docs.py  hive.py  invite.py  mcp.py  notes.py  setup.py  share.py  system.py  todos.py
src/server/services/: __init__.py  git_sync.py  lockout.py  rate_limit.py  reload_hub.py  remote_sync.py  setup_token.py  sse_gate.py  update_check.py
src/templates/: contact.md  decision.md  guide.md  lecture.md  projet.md  retro.md  spec.md  zettel.md
src/viewer/: mcp-tools.json  sw.js  viewer.html
src/viewer/i18n/: en.json
src/viewer/jsfmt/: package.json
src/viewer/lib/: main.ts  tsconfig.json
src/viewer/lib/admin/: access-dialog.ts
src/viewer/lib/boot/: bootstrap.ts
src/viewer/lib/content/: backlinks.ts  content-decorators.ts  content-tree.ts  doc-renderer.ts  frames.ts  history-panel.ts  markdown.ts  skeleton.ts  tag-browse.ts  tags.ts  task-checkboxes.ts  task-markers.ts  toc.ts
src/viewer/lib/core/: data-csrf.ts  dom-refs.ts  i18n.ts  net.ts  rng.ts  sse-coord.ts  state.ts  tree.ts  utils.ts
src/viewer/lib/editor/: editor.ts  search.ts  wikilink-autocomplete.ts
src/viewer/lib/graph/: command-palette.ts  graph-boot.ts  graph-layout.ts  graph-palette.ts  graph-renderer.ts  keyboard-router.ts  mind-graph.ts  pins.ts  tasks-overlay.ts  todo-surface.ts  todos.ts
src/viewer/lib/home/: home-view.ts  layout-chrome.ts
src/viewer/lib/inbox/: inbox.ts
src/viewer/lib/modals/: dialogs.ts  dir-rename-modal.ts  more-actions-menu.ts  new-file-modal.ts  quick-capture.ts  reset-password.ts  (+1 more)
src/viewer/pages/: login.html
src/viewer/partials/: 02-widgets.html  03-dialogs.html  04-forms.html
src/viewer/styles/: 00-base.css  03-panels.css  05-admin.css  06-mobile.css  07-notes.css  08-avatar.css  09-activity.css  10-inbox.css
src/viewer/tailwind/: extract-safelist.py  input.css  safelist.txt  tailwind.config.cjs
src/web/: mcp-tools.json  sw.js  viewer.html
src/web/i18n/: en.json  fr.json
src/web/js/: 00-data-csrf.js  00b-atlas-dom.ts  01-i18n-state.js  01-state.ts  01-tree.ts  01-utils.ts  02-avatar.js  02-avatar.ts  02-content-tree.js  02-content-tree.ts  03-markdown.js  04-toc-tasks.js  05-backlinks-notes.js  06-view-history.js  07-frames.js  08-tags.js  09-editor.js  10-home-layout.js  11-palette-pins.js  12-tasks-graph.js  13-combobox.js  13-todos.js  14-dialogs.js  15-reset-pw.js  16-settings.js  17-qr.js  17-qr.ts  17-security-totp.js  18-totp.js  19-newfile.js  20-acl.js  21-activity.js  22-inbox.js  22-inbox.ts  99-bootstrap.js  99-bootstrap.ts  tsconfig.json
src/web/jsfmt/: eslint.config.mjs  package.json
src/web/pages/: invite.html  login.html  setup.html  share-error.html  share.html
src/web/partials/: 00-shell.html  01-overlays.html  02-widgets.html  03-dialogs.html  04-forms.html  05-settings.html  06-totp.html
src/web/styles/: 00-base.css  01-tree.css  02-prose.css  03-panels.css  04-editor.css  05-admin.css  06-mobile.css  09-activity.css  10-inbox.css
src/web/tailwind/: extract-safelist.py  input.css  package-lock.json  package.json  safelist.txt  tailwind.config.cjs
src/web/ts/: build-order.mjs  build.mjs  globals.d.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
templates/: note.md  reunion.md
tests/: harness.py  jsmod.py  preview_inbox.py  run_parallel.py  seed_cloud_inbox.py  test_acl.py  test_acl_api.py  test_acl_mcp.py  test_acl_unit.py  test_activity.py  test_admin.py  test_attribution.py  test_auth_hardening.py  test_avatar.py  test_branding.py  test_browse.py  test_build_contract.py  test_build_offline_acl.py  test_cli.py  test_cli_tokens.py  test_cloud_filestore.py  test_commit_subjects.py  test_config.py  test_contradictions_cluster.py  test_contradictions_compare.py  test_contradictions_extract.py  test_contradictions_fuzzy.py  test_contradictions_golden.py  test_contradictions_parsers.py  test_contradictions_store.py  test_contradictions_subject.py  test_contradictions_verdict.py  test_deploy_image.py  test_extensions.py  test_federation.py  test_files.py  test_git_sync_attribution.py  test_history.py  test_hive.py  test_i18n.py  (+17 more)
tests/fixtures/contradictions_kb/: expected.json
web/: sw.js  viewer.html
web/tailwind/: extract-safelist.py  input.css  safelist.txt
(+139 files in other folders)
