[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-mind"
dynamic = ["version"]
description = "Self-hostable, AI-native knowledge base engine — an external brain you share with your AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "The Atlas Mind authors" }]
keywords = ["knowledge-base", "wiki", "markdown", "self-hosted", "mcp", "ai", "notes"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
# The engine is pure standard library. bcrypt is an OPTIONAL extra, used only to
# verify legacy "$2…" password hashes (the native scheme is scrypt, stdlib).
dependencies = []

[project.optional-dependencies]
bcrypt = ["bcrypt>=4.1"]

[project.scripts]
atlas = "atlas_mind.cli:main"
# Alias matching the package name, so `uvx atlas-mind` / `pipx run atlas-mind`
# resolve a command without needing `--from`. Both invoke the same CLI.
atlas-mind = "atlas_mind.cli:main"

[project.urls]
Homepage = "https://github.com/Anakior/atlas-mind"
Repository = "https://github.com/Anakior/atlas-mind"
Issues = "https://github.com/Anakior/atlas-mind/issues"

# The engine lives under src/ and is published as the `atlas_mind` package. The
# viewer assets (src/web) and document skeletons (src/templates) live INSIDE the
# package and are shipped as package data, so a `pip install atlas-mind` wheel is
# fully self-contained (no clone, no separate assets to fetch).
[tool.setuptools]
packages = ["atlas_mind"]
package-dir = { "atlas_mind" = "src" }

# Single source of truth for the version: src/__init__.py (__version__). Both the
# built package metadata AND the runtime fallback (_engine_version) read it, so
# they can never drift. Bump the version in ONE place.
[tool.setuptools.dynamic]
version = { attr = "atlas_mind.__version__" }

[tool.setuptools.package-data]
atlas_mind = ["web/**/*", "templates/**/*"]
